--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon src/server.js"
+    "watch": "nodemon src/server.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "16.15.0"
   }
 }
