--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "altschool_blog_app",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon src/server.js",
-    "start": "node ./src/server.js"
+    "watch": "nodemon src/index.js",
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
