--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "watch": "nodemon src/index.js",
     "start": "node ./src/index.js"
+  },
+  "jest": {
+"testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +25,8 @@
   },
   "engines": {
     "node": "16.15.0"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1"
   }
 }
